# parallel_downloader

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: args.rs  config.rs  daemon.rs  ipc.rs  lib.rs  main.rs  observer.rs  state.rs  utils.rs  worker.rs
tests/: integration_test.rs
