[package]
name = "quick-pull"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
